edit light style for transparent background, add wales Youtube videos, style side panel and cluster markers

--- a/src/styles/__colours.scss
+++ b/src/styles/__colours.scss
@@ -42,7 +42,7 @@ $color-pink-lightest: #fff2f5;
 
 @mixin light {
   color: $color-primary-charcoal;
-  background: $color-primary-white;
+  // background: $color-primary-white;
 }
 
 .dark {
